Run submissions in Docker sandboxes